Cherry-pick da04f8d6cf5c. rdar://175009190

REGRESSION (Safari 26.3 - 26.4): RTCPeerConnection with iceTransportPolicy "relay" gathers zero ICE candidates
    https://bugs.webkit.org/show_bug.cgi?id=312332
    rdar://174794660

    Reviewed by David Kilzer.

    We partially revert https://commits.webkit.org/304847@main as this breaks DNS lookup in macOS Sequoia.

    * Source/WebCore/platform/network/cf/DNSResolveQueueCFNet.cpp:
    (WebCore::DNSResolveQueueCFNet::performDNSLookup):

    Canonical link: https://commits.webkit.org/311432@main

Canonical link: https://commits.webkit.org/305413.895@safari-7624.4-branch