Source/WebCore/platform/network/cf/DNSResolveQueueCFNet.cpp
@@ -166,7 +166,8 @@ void DNSResolveQueueCFNet::performDNSLookup(const String& hostname, Ref<Completi
         Vector<IPAddress> result;
         result.reserveInitialCapacity(count);
         for (size_t i = 0; i < count; i++) {
-            if (OSObjectPtr resolvedEndpoint = dynamicOSObjectCast<nw_endpoint_t>(nw_array_get_object_at_index(resolvedEndpoints, i))) {
+            // FIXME: Reintroduce dynamicOSObjectCast use once macOS 26 Tahoe is the oldest supported release.
+            if (RetainPtr resolvedEndpoint = reinterpret_cast<nw_endpoint_t>(nw_array_get_object_at_index(resolvedEndpoints, i))) {
                 if (auto address = extractIPAddress(nw_endpoint_get_address(resolvedEndpoint.get())))
                     result.append(WTF::move(*address));
             }
